<resources>

    <string name="app_name">First Project</string>
    <string name="animals">animals</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="apiKey">30318797-739da6e504408acb0a125c7d3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">login</string>
    <string name="forgot_password">forgot password?</string>
    <string name="don_t_have_an_account">don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have an Account!</string>
    <string name="tandc">By creating an account or logging in, you agree to our platform\'s</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="your_images">Your Images</string>
    <string name="your_videos">Your Videos</string>
    <string name="user_profile">User Profile</string>
    <string name="setting">Setting</string>
    <string name="about_us">About Us</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="change_username">Change Username</string>
    <string name="update_phone_number">Update Phone Number</string>
    <string name="edit_phone">Edit Phone Number</string>
    <string name="update_email">Update Email</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="freepic">FreePic</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>
</resources>