<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LobbyView.AccountChild.PhoneFragment">

    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/phoneToolbar"
            app:title="@string/edit_phone"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            style="@style/ShapeAppearanceOverlay.MaterialAlertDialog.Material3"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phoneText"
        android:text="@string/phone_number"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        style="@style/MaterialAlertDialog.Material3.Title.Icon"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneEdit"
        android:padding="10dp"
        android:inputType="phone"
        android:textSize="20sp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/black"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:id="@+id/phoneEditButton"
        android:text="@string/update_phone_number"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textStyle="bold" android:gravity="center"/>


</LinearLayout>