<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".LobbyView.LobbyFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bg1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:backgroundTint="#363638">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:cardCornerRadius="200dp"
            app:strokeWidth="10dp"
            app:strokeColor="@color/black"
            >
            <ImageView
                android:id="@+id/profileDP"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editProfile"
            android:layout_marginTop="120dp"
            android:layout_marginStart="220dp"
            android:src="@drawable/ic_baseline_edit_24"
            android:backgroundTint="@color/white"
            app:backgroundTint="@color/black"
            app:borderWidth="10dp"
            />


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bg2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/bg1"
        android:backgroundTint="#ffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/ic_baseline_account_box_24"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:drawablePadding="10dp"
                android:padding="5dp"
                android:text="@string/account"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/ic_baseline_settings_24"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:drawablePadding="10dp"
                android:padding="5dp"
                android:text="@string/setting"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/ic_baseline_help_24"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:drawablePadding="10dp"
                android:padding="5dp"
                android:text="@string/help"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/aboutUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/ic_baseline_contact_support_24"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:drawablePadding="10dp"
                android:padding="5dp"
                android:text="@string/about_us"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logout"
        android:text="@string/logout"
        android:textColor="@color/black"
        style="@style/ShapeAppearanceOverlay.MaterialAlertDialog.Material3"
        android:textStyle="bold|italic"
        android:padding="5dp"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:gravity="center_horizontal"
        android:textAllCaps="false"/>

</RelativeLayout>