<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.LoginActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/logintext"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:text="@string/login"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/login_email"
        android:layout_below="@id/logintext"
        android:inputType="textEmailAddress"
        android:hint="email"
        android:layout_margin="15dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:background="@drawable/rounded_corners"
        android:drawableStart="@drawable/email"
        android:drawablePadding="20dp"
        android:padding="10dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputLayout"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/login_password"
            android:layout_below="@id/login_email"
            android:inputType="textPassword"
            android:layout_margin="15dp"
            android:hint="password"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_corners"
            android:drawableStart="@drawable/lock"
            android:drawableRight="@drawable/ic_baseline_visibility_off_24"
            android:drawablePadding="20dp"
            android:padding="10dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/forgotPassword"
        android:layout_below="@id/inputLayout"
        android:layout_margin="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:onClick="forgotPasswordListener"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/loginButton"
        android:layout_below="@id/forgotPassword"
        android:text="@string/login"
        android:textSize="15sp"
        android:layout_margin="15dp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_margin="15dp"
        android:id="@+id/auth_layout"
        android:layout_below="@id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dont_have_an_account"
        android:layout_below="@id/auth_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:textSize="15sp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_register"
        android:layout_below="@id/auth_layout"
        android:layout_toEndOf="@id/dont_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/register"
        android:textColor="@color/black"
        />

</RelativeLayout>