<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LobbyView.AccountChild.PasswordFragment">

    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/passwordToolbar"
            app:titleCentered="true"
            app:title="Edit Password"
            app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            style="@style/ShapeAppearanceOverlay.MaterialAlertDialog.Material3"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/oldPasswordText"
        android:text="@string/old_password"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        style="@style/MaterialAlertDialog.Material3.Title.Icon"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/oldPasswordEdit"
        android:padding="10dp"
        android:inputType="text"
        android:textSize="20sp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/black"
        android:textColor="@color/white"
        tools:ignore="TextFields" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newPasswordText"
        android:text="@string/new_password"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        style="@style/MaterialAlertDialog.Material3.Title.Icon"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newPasswordEdit"
        android:padding="10dp"
        android:inputType="text"
        android:textSize="20sp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/black"
        android:textColor="@color/white"
        tools:ignore="TextFields" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:id="@+id/passwordEditButton"
        android:text="@string/update_password"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textStyle="bold" android:gravity="center"/>

</LinearLayout>