<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.RegisterActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/registertext"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:text="Register"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/register_username"
        android:layout_below="@id/registertext"
        android:inputType="textPersonName"
        android:hint="username"
        android:layout_margin="15dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:background="@drawable/rounded_corners"
        android:drawableStart="@drawable/user"
        android:drawablePadding="20dp"
        android:padding="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/register_email"
        android:layout_below="@id/register_username"
        android:inputType="textEmailAddress"
        android:hint="email"
        android:layout_margin="15dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:background="@drawable/rounded_corners"
        android:drawableStart="@drawable/email"
        android:drawablePadding="20dp"
        android:padding="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/register_phone_no"
        android:layout_below="@id/register_email"
        android:inputType="text|phone"
        android:hint="phone no."
        android:layout_margin="15dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:background="@drawable/rounded_corners"
        android:drawableStart="@drawable/ic_baseline_local_phone_24"
        android:drawablePadding="20dp"
        android:padding="10dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@id/register_phone_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputLayout"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/register_password"
            android:layout_below="@id/register_phone_no"
            android:inputType="textPassword"
            android:layout_margin="15dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:hint="password"
            android:background="@drawable/rounded_corners"
            android:drawableStart="@drawable/lock"
            android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
            android:drawablePadding="20dp"
            android:padding="10dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/register_conditions"
        android:layout_below="@id/inputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:textSize="13sp"
        android:text="@string/tandc"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/condition"
        android:layout_below="@id/register_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:text="Conditions of Use"
        android:textColor="#0000FF"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text3"
        android:layout_below="@id/register_conditions"
        android:layout_toEndOf="@id/condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:text=" and"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/policy"
        android:layout_below="@id/register_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/text3"
        android:textSize="13sp"
        android:text=" Privacy Policies"
        android:textColor="#0000FF"
        android:layout_marginTop="5dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/registerButton"
        android:layout_below="@id/condition"
        android:text="@string/register"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:onClick="RegisterListener"
        tools:ignore="OnClick,UsingOnClickInXml" />



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/AlreadyHave"
        android:layout_below="@id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="15sp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/register_login"
        android:layout_below="@id/registerButton"
        android:layout_toEndOf="@id/AlreadyHave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/login"
        android:textColor="@color/black"
        android:layout_margin="15dp"
        />

</RelativeLayout>